--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,19 @@ body {
  }
  
  .sidebar {
-  width: 200px;
-  padding: 120px 20px 20px;
+  width: 240px;
+  padding: 100px 0 20px;
   position: fixed;
   height: 100vh;
   background: white;
  }
  
- #menu-placeholder {
+ .menu {
+  padding-left: 35px;
   font-family: 'Matrix II OT', serif;
  }
  
- #menu-placeholder a {
+ .menu a {
   display: block;
   color: black;
   text-decoration: none;
@@ -25,19 +26,19 @@ body {
   font-size: 20px;
  }
  
- #menu-placeholder a:hover {
+ .menu a:hover {
   text-decoration: underline;
  }
  
  .logo-container {
   position: fixed;
   top: 20px;
-  left: 20px;
+  left: 5px;  
   width: 300px;
-  height: 150px;
+  height: 200px;
   z-index: 100;
   cursor: pointer;
- }
+}
  
  .logo {
   position: absolute;
@@ -59,7 +60,7 @@ body {
   display: flex;
   justify-content: center;
   padding: 120px 20px 20px;
-  margin-left: 200px;
+  margin-left: 240px;
  }
  
  .content {
@@ -68,7 +69,7 @@ body {
   line-height: 1.6;
   font-family: 'Matrix II OT', serif;
   font-size: 18px;
-  text-align: justify; 
+  text-align: justify;
  }
  
  .cv-section {
