--- a/css/styles.css
+++ b/css/styles.css
@@ -3,34 +3,35 @@ body {
   padding: 0;
   display: flex;
   min-height: 100vh;
- }
+  font-family: 'Matrix II OT', serif;
+}
  
- .sidebar {
+.sidebar {
   width: 240px;
   padding: 100px 0 20px;
   position: fixed;
   height: 100vh;
   background: white;
- }
+}
  
- .menu {
+.menu {
   padding-left: 35px;
   font-family: 'Matrix II OT', serif;
- }
+}
  
- .menu a {
+.menu a {
   display: block;
   color: black;
   text-decoration: none;
   margin: 15px 0;
   font-size: 20px;
- }
+}
  
- .menu a:hover {
+.menu a:hover {
   text-decoration: underline;
- }
+}
  
- .logo-container {
+.logo-container {
   position: fixed;
   top: 20px;
   left: 5px;  
@@ -40,7 +41,7 @@ body {
   cursor: pointer;
 }
  
- .logo {
+.logo {
   position: absolute;
   top: 0;
   left: 0;
@@ -49,56 +50,82 @@ body {
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
   object-fit: contain;
- }
+}
  
- .logo.active {
+.logo.active {
   opacity: 1;
- }
+}
  
- .main-content {
+.main-content {
   flex: 1;
   display: flex;
   justify-content: center;
   padding: 120px 20px 20px;
   margin-left: 240px;
- }
+}
  
- .content {
+.content {
   max-width: 600px;
   width: 100%;
   line-height: 1.6;
   font-family: 'Matrix II OT', serif;
   font-size: 18px;
   text-align: justify;
- }
+}
  
- .cv-section {
+.cv-section {
   margin-bottom: 2rem;
- }
+}
  
- .gallery {
+.gallery {
   display: flex;
   flex-direction: column;
   gap: 40px;
   max-width: 600px;
   margin: 0 auto;
- }
+}
  
- .gallery-item {
+.gallery-item {
   display: flex;
   flex-direction: column;
- }
+}
  
- .gallery-item img {
+.gallery-item img {
   width: 100%;
   height: auto;
   margin-bottom: 15px;
- }
+}
  
- .gallery-item p {
+.gallery-item p {
   margin: 0;
   font-family: 'Matrix II OT', serif;
   font-size: 18px;
   color: #333;
   line-height: 1.4;
- }
+}
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
+  .sidebar {
+    width: 100%;
+    height: auto;
+    position: relative;
+    padding: 20px 0;
+  }
+  
+  .logo-container {
+    position: relative;
+    margin: 0 auto;
+    left: 0;
+    text-align: center;
+  }
+  
+  .main-content {
+    margin-left: 0;
+    padding-top: 30px;
+  }
+  
+  body {
+    flex-direction: column;
+  }
+}
