--- a/components/menu.html
+++ b/components/menu.html
@@ -1,13 +1,10 @@
-<div class="sidebar">
-  <div class="menu">
+<div class="menu">
+  <div class="menu-flowers">
     ✺ ❁ ❉ ❋ ❈ ❊ ✾ ✽ ✿
     ❀ ❃ ❋ ❁ ✺ ❁ ❉ ❋ ❈
-    ❊ ✾ ✽ ✿ ❀ ❃ ❋ ❁ ✺
-    ❁ ❉ ❋ ❈ ❊ ✾ 
-    <a href="/index.html">home</a>
-    <a href="/pages/statement.html">à propos</a>
-    <a href="/pages/cv.html">CV</a>
-    <a href="/pages/bio.html">bio</a>
-    <a href="/pages/contact.html">contact</a>
+    ❊ ✾ ✽ ✿ ❀ ❃ ❋ ❁ ✺ 
+    ✺ ❁ ❉ 
   </div>
+  <a href="/index.html">home</a>
+  <a href="/about.html">about</a>
 </div>
